WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281712
functionCallerIsBBQOrOMGCompiled should not crash when tail called
https://bugs.webkit.org/show_bug.cgi?id=281712
Summary
functionCallerIsBBQOrOMGCompiled should not crash when tail called
Keith Miller
Reported
2024-10-17 18:21:23 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2024-10-17 18:21:24 PDT
<
rdar://problem/135532466
>
Keith Miller
Comment 2
2024-10-17 18:25:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35400
EWS
Comment 3
2024-10-17 21:31:25 PDT
Committed
285376@main
(7eb649d16218): <
https://commits.webkit.org/285376@main
> Reviewed commits have been landed. Closing PR #35400 and removing active labels.
EWS
Comment 4
2024-10-18 11:54:25 PDT
Committed
283286.320@safari-7620-branch
(7e829fad604d): <
https://commits.webkit.org/283286.320@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2077 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug