functionCallerIsBBQOrOMGCompiled should not crash when tail called https://bugs.webkit.org/show_bug.cgi?id=281712 rdar://135532466

Reviewed by Justin Michaud.

If FTL direct calls to wasm and that wasm tail calls functionCallerIsBBQOrOMGCompiled
we currently assertion failure. This causes noise with fuzzers so just throw instead.

* Source/JavaScriptCore/jsc.cpp:
(JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/285376@main